patch_based_material_recognition/nohup.out
  File "train.py", line 30
    scheduler = StepLR(optimizer, step_size=07, gamma=0.4)
                                             ^
SyntaxError: invalid token
